--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "axios": "^0.19.0",
+    "dotenv": "^8.2.0",
     "expo": "^36.0.0",
     "expo-font": "~8.0.0",
     "expo-sqlite": "~8.0.0",
