--- a/package.json
+++ b/package.json
@@ -21,12 +21,13 @@
     "react": "16.9.0",
     "react-dom": "16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.1.tar.gz",
+    "react-native-autoheight-webview": "^1.4.1",
     "react-native-awesome-alerts": "^1.3.0",
     "react-native-elements": "^1.2.7",
     "react-native-gesture-handler": "~1.5.0",
     "react-native-modal-dropdown": "^0.7.0",
     "react-native-paper": "^3.4.0",
-    "react-native-reanimated": "~1.4.0",
+    "react-native-reanimated": "^1.4.0",
     "react-native-render-html": "^4.1.2",
     "react-native-screens": "2.0.0-alpha.12",
     "react-native-sqlite-storage": "^4.1.0",
