--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "ExamHacks",
-    "slug": "ExamHacks",
+    "name": "TestTricks",
+    "slug": "TestTricks",
     "privacy": "public",
     "sdkVersion": "36.0.0",
     "platforms": [
