--- a/android/build.gradle
+++ b/android/build.gradle
@@ -10,6 +10,7 @@ buildscript {
     supportLibVersion = '28.0.0'
     kotlinVersion = '1.3.21'
     repositoryUrl = "file:${System.env.HOME}/.m2/repository/"
+    googlePlayServicesAuthVersion = "16.0.1"
   }
   repositories {
     google()
@@ -20,6 +21,7 @@ buildscript {
     classpath 'com.android.tools.build:gradle:3.3.2'
     classpath 'com.google.gms:google-services:3.2.1'
     classpath 'de.undercouch:gradle-download-task:2.0.0'
+    classpath 'com.google.gms:google-services:4.1.0'
 
     // https://github.com/awslabs/aws-device-farm-gradle-plugin/releases
     classpath 'com.amazonaws:aws-devicefarm-gradle-plugin:1.3'
@@ -71,6 +73,10 @@ allprojects {
 
     // Want this last so that we never end up with a stale cache
     mavenLocal()
+    maven {
+            // All of React Native (JS, Obj-C sources, Android binaries) is installed from npm
+            url "$rootDir/../node_modules/react-native/android"
+        }
   }
 }
 
