--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -6,3 +6,8 @@ org.gradle.configureondemand=true
 org.gradle.internal.repository.initial.backoff=1000
 android.useAndroidX=true
 android.enableJetifier=true
+
+MYAPP_RELEASE_STORE_FILE=my-release-key.keystore
+MYAPP_RELEASE_KEY_ALIAS=JAMES414
+MYAPP_RELEASE_STORE_PASSWORD=JAMES414
+MYAPP_RELEASE_KEY_PASSWORD=JAMES414
