--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
     "axios": "^0.19.0",
     "dotenv": "^8.2.0",
     "expo": "^36.0.0",
+    "expo-ads-admob": "^8.0.0",
+    "expo-facebook": "^8.0.0",
     "expo-font": "~8.0.0",
+    "expo-google-app-auth": "^8.0.1",
     "expo-sqlite": "~8.0.0",
     "expokit": "^35.0.3",
     "express": "^4.17.1",
@@ -25,9 +28,11 @@
     "react-native-awesome-alerts": "^1.3.0",
     "react-native-elements": "^1.2.7",
     "react-native-gesture-handler": "~1.5.0",
+    "react-native-google-signin": "^2.1.1",
     "react-native-modal-dropdown": "^0.7.0",
     "react-native-paper": "^3.4.0",
     "react-native-reanimated": "^1.4.0",
+    "react-native-rename": "^2.4.1",
     "react-native-render-html": "^4.1.2",
     "react-native-screens": "2.0.0-alpha.12",
     "react-native-sqlite-storage": "^4.1.0",
@@ -44,7 +49,8 @@
     "react-redux": "^7.1.3",
     "redux": "^4.0.4",
     "redux-devtools-extension": "^2.13.8",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "shorthash": "0.0.2"
   },
   "devDependencies": {
     "babel-preset-expo": "^7.1.0"
