--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "react-native-autoheight-webview": "^1.4.1",
     "react-native-awesome-alerts": "^1.3.0",
     "react-native-elements": "^1.2.7",
-    "react-native-gesture-handler": "~1.5.0",
+    "react-native-gesture-handler": "^1.5.0",
     "react-native-google-signin": "^2.1.1",
     "react-native-modal-dropdown": "^0.7.0",
     "react-native-paper": "^3.4.0",
