--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -103,6 +103,7 @@ apply from: 'expo.gradle'
 apply from: "../../node_modules/react-native-unimodules/gradle.groovy"
 
 dependencies {
+    implementation project(':react-native-svg')
     implementation project(':react-native-google-signin')
     implementation project(':react-native-webview')
     compile project(':react-native-vector-icons')
