--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.1.tar.gz",
     "react-native-autoheight-webview": "^1.4.1",
     "react-native-awesome-alerts": "^1.3.0",
+    "react-native-circular-progress": "^1.3.6",
     "react-native-elements": "^1.2.7",
     "react-native-gesture-handler": "^1.5.0",
     "react-native-google-signin": "^2.1.1",
@@ -36,12 +37,14 @@
     "react-native-render-html": "^4.1.2",
     "react-native-screens": "2.0.0-alpha.12",
     "react-native-sqlite-storage": "^4.1.0",
+    "react-native-svg": "9.13.3",
     "react-native-swipe-gestures": "^1.0.4",
     "react-native-table-component": "^1.2.1",
     "react-native-unimodules": "^0.6.0",
     "react-native-vector-icons": "^6.6.0",
     "react-native-web": "^0.11.7",
     "react-native-webview": "^7.4.3",
+    "react-native-youtube": "^2.0.0",
     "react-navigation": "^4.0.10",
     "react-navigation-drawer": "^2.3.3",
     "react-navigation-stack": "^1.10.3",
