--- a/package.json
+++ b/package.json
@@ -56,7 +56,8 @@
     "shorthash": "0.0.2"
   },
   "devDependencies": {
-    "babel-preset-expo": "^7.1.0"
+    "babel-preset-expo": "^7.1.0",
+    "react-native-dotenv": "^0.2.0"
   },
   "private": true,
   "rnpm": {
