--- a/package.json
+++ b/package.json
@@ -57,6 +57,8 @@
   },
   "devDependencies": {
     "babel-preset-expo": "^7.1.0",
+    "babel-preset-react-native": "^4.0.1",
+    "metro-react-native-babel-preset": "^0.58.0",
     "react-native-dotenv": "^0.2.0"
   },
   "private": true,
